--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,24 @@ spring:
       # 大小限制
       max-file-size: 10MB
   session:
-    # todo 取消注释开启分布式 session（须先配置 Redis）
-    # store-type: redis
+    # 开启分布式 session
+    store-type: redis
     # 30 天过期
     timeout: 2592000
+#  # Redis 配置
+#  data:
+#    redis:
+#      host: localhost
+#      port: 6379
+#      password: # 如果Redis设置了密码，请在此配置
+#      database: 2
+#      timeout: 5000ms
+#      lettuce:
+#        pool:
+#          max-active: 8
+#          max-idle: 8
+#          min-idle: 0
+#          max-wait: -1ms
 server:
   port: 8123
   servlet:
