feat: 添加API限流功能和系统优化
- 添加Guava RateLimiter实现API接口限流
- 新增用户级别和全局级别的限流控制
- 集成Caffeine本地缓存和Micrometer监控
- 添加限流相关错误码和异常处理
- 优化缓存控制器权限检查
- 修复CosManager导入路径问题
- 添加KeepReport逻辑删除注解
- 更新.gitignore忽略规则（包含application-prod-optimized.yml）

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 ### CUSTOM ###
+logs
+docs
+.augment
+application-prod-optimized.yml
 application-local.yml
 application-prod.yml
 forbidden-words.txt
