feat: 新增健身知识库模块与数据表
包含内容：

- 新增知识库 SQL：fitness_knowledge_tables.sql

- 新增知识库分层代码：Controller/DTO/Entity/VO/Mapper/Service/Impl

- 新增 MyBatis Mapper XML 映射

- 更新 .gitignore

- 移除旧的 API 测试文档（BMI_CALCULATOR_API.md, FITNESS_API_TEST.md）

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,8 @@ application-prod.yml
 forbidden-words.txt
 tmp
 mcp-servers.json
-README_排行榜功能.md
-WARP.md
-健身排行榜功能_部署和测试指南.md
-健身排行榜功能_项目完成总结.md
-健身排行榜功能需求文档_Redis版.md
-后端接口优化需求文档.md
+docs/
+GraduationProject/
 
 HELP.md
 target/
