chore: 更新忽略规则并移除 favicon

--- a/.gitignore
+++ b/.gitignore
@@ -24,21 +24,22 @@ pnpm-debug.log*
 
 # Documentation and scripts
 scripts/
-public
-CSS_VARIABLES_THEME_GUIDE.md
-DARK_MODE_FINAL_OPTIMIZATION.md
-DARK_MODE_FINAL_SOLUTION.md
-DARK_MODE_OPTIMIZATION.md
+public/
+docs/CSS_VARIABLES_THEME_GUIDE.md
+docs/DARK_MODE_FINAL_OPTIMIZATION.md
+docs/DARK_MODE_FINAL_SOLUTION.md
+docs/DARK_MODE_OPTIMIZATION.md
 default_OpenAPI.json
-FITNESS_KNOWLEDGE_OPTIMIZATION.md
-FITNESS_QUICK_REFERENCE.md
-IMAGE_OPTIMIZATION_GUIDE.md
-IMAGE_SOLUTION_SUMMARY.md
-PINIA_FIX.md
-QUICK_FIX_GUIDE.md
-TEXT_VISIBILITY_FIX.md
-THEME_FEATURE.md
-体脂率显示问题解决方案.md
-体脂率自动计算功能说明.md
-运动卡路里自动计算功能说明.md
-健身排行榜后端接口文档.md
+docs/FITNESS_KNOWLEDGE_OPTIMIZATION.md
+docs/FITNESS_QUICK_REFERENCE.md
+docs/IMAGE_OPTIMIZATION_GUIDE.md
+docs/IMAGE_SOLUTION_SUMMARY.md
+docs/PINIA_FIX.md
+docs/QUICK_FIX_GUIDE.md
+docs/TEXT_VISIBILITY_FIX.md
+docs/THEME_FEATURE.md
+docs/体脂率显示问题解决方案.md
+docs/体脂率自动计算功能说明.md
+docs/运动卡路里自动计算功能说明.md
+docs/健身排行榜后端接口文档.md
+docs/BACKGROUND_OPTIMIZATION.md
