--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -116,6 +116,29 @@ mq:
       base-url: https://api.deepseek.com
       model: deepseek-chat
       temperature: 0.7
+    # 自定义模型配置（支持多个模型）
+    custom:
+      models:
+        # GLM-4.7 模型配置
+        "glm-4.7":
+          api-key: sk-xxxx
+          base-url: https://xxx/v1
+          model: glm-4.7
+          temperature: 0.7
+          enabled: true
+        # Gemini-2.5-Flash 模型配置
+        "gemini-2.5-flash":
+          api-key: sk-xxxx
+          base-url: https://xxx/v1
+          model: gemini-2.5-flash
+          temperature: 0.7
+          enabled: true
+          # deepseek-v3.2 模型配置
+        "deepseek-v3.2":
+          api-key: sk-xxxx
+          base-url: https://xxx/v1
+          model: deepseek-v3.2
+          temperature: 0.7
 # 接口文档配置
 # knife4j
 knife4j:
