--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -110,35 +110,42 @@ springdoc:
           retry-delay: 1000
 mq:
   ai:
+    # 默认使用的模型（可选: qwen-plus, deepseek, glm-4.7, gemini-2.5-flash 等）
     default-model: qwen-plus
-    deepseek:
-      api-key: 你的 API Key
-      base-url: https://api.deepseek.com
-      model: deepseek-chat
-      temperature: 0.7
-    # 自定义模型配置（支持多个模型）
-    custom:
-      models:
-        # GLM-4.7 模型配置
-        "glm-4.7":
-          api-key: sk-xxxx
-          base-url: https://xxx/v1
-          model: glm-4.7
-          temperature: 0.7
-          enabled: true
-        # Gemini-2.5-Flash 模型配置
-        "gemini-2.5-flash":
-          api-key: sk-xxxx
-          base-url: https://xxx/v1
-          model: gemini-2.5-flash
-          temperature: 0.7
-          enabled: true
-          # deepseek-v3.2 模型配置
-        "deepseek-v3.2":
-          api-key: sk-xxxx
-          base-url: https://xxx/v1
-          model: deepseek-v3.2
-          temperature: 0.7
+    # 统一模型配置（所有 OpenAI 兼容模型）
+    models:
+      # DeepSeek 官方模型
+      deepseek:
+        name: "DeepSeek"
+        api-key: ${DEEPSEEK_API_KEY:你的 API Key}
+        base-url: https://api.deepseek.com
+        model: deepseek-chat
+        temperature: 0.7
+        enabled: true
+      # GLM-4.7 模型
+      glm-4-7:
+        name: "GLM-4.7"
+        api-key: ${CUSTOM_API_KEY:sk-xxxx}
+        base-url: https://xxx/v1
+        model: glm-4.7
+        temperature: 0.7
+        enabled: true
+      # Gemini-2.5-Flash 模型
+      gemini-2-5-flash:
+        name: "Gemini-2.5-Flash"
+        api-key: ${CUSTOM_API_KEY:sk-xxxx}
+        base-url: https://xxx/v1
+        model: gemini-2.5-flash
+        temperature: 0.7
+        enabled: true
+      # DeepSeek-V3.2 模型
+      deepseek-v3-2:
+        name: "DeepSeek-V3.2"
+        api-key: ${CUSTOM_API_KEY:sk-xxxx}
+        base-url: https://xxx/v1
+        model: deepseek-v3.2
+        temperature: 0.7
+        enabled: true
 # 接口文档配置
 # knife4j
 knife4j:
